--- a/Assignment_3.ipynb
+++ b/Assignment_3.ipynb
@@ -172,9 +172,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 225
+          "height": 208
         },
-        "outputId": "26ad3a26-a78b-4174-c7f5-937f3c983e6c"
+        "outputId": "a2a4297a-0fb8-4359-cb3f-fd234950162e"
       },
       "source": [
         "PriceOfFood = 15\n",
@@ -191,31 +191,30 @@
         "def computeprice(foodprice,salestax,tipammount):\n",
         "  overallPrice = foodprice + (foodprice * (salestax/100))\n",
         "  TotalPrice = overallPrice + (overallPrice * (tipammount/100))\n",
-        "  print(\"Total computed price :\"+ str(round(TotalPrice,2)))\n",
+        "  print(\"Total computed price for tip \"+ str(tipammount)+ \" : \" + str(round(TotalPrice,2)))\n",
         "\n",
-        "computeprice(20,9,18)\n",
+        "#computeprice(20,9,18)\n",
         "\n",
         "\n",
         "for itrvar in list(range(15, 25)):\n",
         "  computeprice(PriceOfFood,NYStateTax,itrvar)\n"
       ],
-      "execution_count": 44,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Total price :19.27\n",
-            "Total computed price :25.72\n",
-            "Total computed price :18.78\n",
-            "Total computed price :18.94\n",
-            "Total computed price :19.11\n",
-            "Total computed price :19.27\n",
-            "Total computed price :19.43\n",
-            "Total computed price :19.6\n",
-            "Total computed price :19.76\n",
-            "Total computed price :19.92\n",
-            "Total computed price :20.09\n",
-            "Total computed price :20.25\n"
+            "Total computed price for tip 15 : 18.78\n",
+            "Total computed price for tip 16 : 18.94\n",
+            "Total computed price for tip 17 : 19.11\n",
+            "Total computed price for tip 18 : 19.27\n",
+            "Total computed price for tip 19 : 19.43\n",
+            "Total computed price for tip 20 : 19.6\n",
+            "Total computed price for tip 21 : 19.76\n",
+            "Total computed price for tip 22 : 19.92\n",
+            "Total computed price for tip 23 : 20.09\n",
+            "Total computed price for tip 24 : 20.25\n"
           ],
           "name": "stdout"
         }
@@ -809,7 +808,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "432087c3-9699-4673-fa4b-2d767580b71f"
+        "outputId": "5b44c6dc-9180-4bf9-961b-716957977e19"
       },
       "source": [
         "def RoadCharges(TypeofCar,distance):\n",
@@ -824,21 +823,21 @@
         "\n",
         "  return charges\n",
         "\n",
-        "RoadCharges('taxis',1)"
+        "RoadCharges('Car',1)"
       ],
-      "execution_count": 21,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "0.5"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 39
         }
       ]
     },
@@ -1137,7 +1136,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "fc7abca6-b119-4ee6-a194-20d42f5b4c1d"
+        "outputId": "93fa0f82-2858-4ed5-8e8f-4ca8985ee6ca"
       },
       "source": [
         "import re\n",
@@ -1173,12 +1172,9 @@
         "\n",
         "fhandres = open(\"restaurant-names.txt\")\n",
         "filelist = fhandres.readlines()\n",
-        "FreqWords(filelist)\n",
-        "\n",
-        "\n",
-        "\n"
+        "FreqWords(filelist)\n"
       ],
-      "execution_count": 33,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -1198,7 +1194,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "cd6c38c2-789e-4a9d-b684-e8ab35aac07d"
+        "outputId": "342c8ea7-f99c-462d-ad17-be87d384e9b2"
       },
       "source": [
         "fhandres2 = open(\"restaurants.txt\")\n",
@@ -1211,7 +1207,7 @@
         "\n",
         "FreqWords(filelist2)"
       ],
-      "execution_count": 34,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
